--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "eslint-config-fullstack": "^6.0.0",
     "nodemon": "^2.0.6",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
