--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/Capstone-Heroes/capstone-heroes#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
