--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "morgan": "^1.10.0",
+    "neo4j-driver": "^4.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
