tested auth, fixed bugs

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Capstone-Heroes/capstone-heroes#readme",
   "dependencies": {
+    "apoc": "^2.1.6",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
