--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apoc": "^2.1.6",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
