--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "mapbox-gl": "^1.13.0",
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -43,6 +44,9 @@
     "babel-loader": "^8.0.5",
     "eslint-config-fullstack": "^6.0.0",
     "nodemon": "^2.0.6",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   }
