--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Capstone-Heroes/capstone-heroes#readme",
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
@@ -42,11 +43,13 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^5.0.1",
     "eslint-config-fullstack": "^6.0.0",
     "nodemon": "^2.0.6",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0"
   }
