--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 node_modules
-server/public/*.js
+server/public/*.js*
 server/public/*.txt
-<<<<<<< HEAD
-
-=======
-server/public/bundle.js.map
->>>>>>> dev
