--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apoc": "^2.1.6",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
@@ -41,8 +42,8 @@
     "neo4j-driver": "^4.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-mapbox-gl": "^5.1.1",
     "react-icons": "^3.11.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
