--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.2.1",
     "react": "^17.0.1",
