removed keys from constants file and added to .env, cleaned up footer file, updated readme

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "build-watch": "webpack -w",
+    "build-watch": "webpack -w --config webpack.config.dev.js",
     "start-server": "nodemon server/index.js -e html,js,css --ignore public",
     "start-dev": "npm run build-watch & npm run start-server",
     "seed": "node seed"
