--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,19 @@ services:
       - NEO4JLABS_PLUGINS=["apoc"]
       - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
       # - NEO4J_URI=bolt://localhost:7687
+    networks:
+      - mynetwork
 
   web:
-      image: capstone-heroes-docker
+      image: "capstone-heroes-docker"
       ports:
         - "8080:8080"
+      links:
+        - "database:database"
+      networks:
+        - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
+
