--- a/.github/workflows/axe.yaml
+++ b/.github/workflows/axe.yaml
@@ -15,16 +15,28 @@ jobs:
         node-version: [16.x]
         
     steps:
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v3
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+            
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm start & npx wait-on http://localhost:8080
+      - run: yarn install --frozen-lockfile
+      - run: yarn build --if-present
+      - run: yarn start & npx wait-on http://localhost:8080
       - name: Run axe
         run: |
-           npm install -g @axe-core/cli
+           yarn add -g @axe-core/cli
            axe http://localhost:8080 --exit      
