--- a/package.json
+++ b/package.json
@@ -37,13 +37,16 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "ejs": "3.1.7",
     "express": "^4.17.1",
+    "glob-parent": "5.1.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
     "morgan": "^1.10.0",
     "neo4j-driver": "^4.2.1",
     "neovis.js": "^1.6.0",
+    "node-forge": "1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
