--- a/.github/workflows/axe.yaml
+++ b/.github/workflows/axe.yaml
@@ -26,16 +26,14 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-            
-      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: "yarn"
       - run: yarn install --frozen-lockfile
       - run: yarn build --if-present
-      - run: yarn start & npx wait-on http://localhost:8080
+      - run: yarn start
       - name: Run axe
         run: |
            yarn add -g @axe-core/cli
